changement methode removeLast() pas compatible